--- a/views/grid.pug
+++ b/views/grid.pug
@@ -1,36 +1,34 @@
 extends layout
 
 block content
-  h1 #{title} 
-  // Display the values of query.rows and query.cols
-  p The value of rows is #{query.rows} and the value of cols is #{query.cols}.
-
-  // Convert query.rows and query.cols to numbers
-  - let rows = Number(query.rows)
-  - let cols = Number(query.cols)
-
-  // Check if rows and cols are integers
-  if (!Number.isInteger(rows) || !Number.isInteger(cols))
-    p Rows and cols must be integers.
-
-  // Check if rows and cols are below 3 or above 13
-  if (rows < 3 || rows > 13 || cols < 3 || cols > 13)
-    p Number of rows and columns must be between 3 and 13.
-
-  // Otherwise, generate the table
-  - else
+  h1= title
+  p Rows:#{query.rows} Cols:#{query.cols}
+  - rows = Number(query.rows)
+  - cols = Number(query.cols)
+  if !Number.isInteger(rows)
+    p Row is not an Integer
+  else if !Number.isInteger(cols)
+    p Col is not an Integer
+  else if rows < 3
+    p Row is too small
+  else if rows >13
+    p Row is too big
+  else if cols < 3
+    p Col is too small
+  else if cols > 13
+    p Col is too big
+  else
     table#outer
-      - for(let i=0; i<rows; i++)
+      - for(let i=0; i<rows; i++) {
         tr#middle
-          - for(let j=0; j<cols; j++)
-            td= computeCellValue(i, j)
-
-  script.
-    function computeCellValue(row, col) {
-      // Convert row and col to numbers
-      row = Number(row);
-      col = Number(col);
-
-      // Compute the value for the cell
-      return Math.min(row, col) + 1;
-    }
+          - for(let j=0; j<cols; j++) {
+              - var value = 1 * (i + 1)
+              if j == 0
+                td= 1
+              else
+                if j+1 > i
+                  td= value
+                else
+                  td= j+1
+          - }
+      - }
