--- a/views/fossilupdate.pug
+++ b/views/fossilupdate.pug
@@ -14,7 +14,7 @@ block content
         div.row(class='mb-2')
             div.mr-1 ID is
             div #{fossilId}
-        - let actionId = "/resource/fossil/" + fossilId
+        - let actionId = "/resource/fossils/" + fossilId
 
         form(id='FossilForm', action= actionId, method="PUT")
             div.form-group
@@ -31,20 +31,17 @@ block content
     script.
         document.forms['FossilForm'].addEventListener('submit', (event) => {
             event.preventDefault();
-            // TODO: Do something here to show user that form is being submitted
+            // TODO do something here to show user that form is being submitted
             fetch(event.target.action, {
                 method: 'PUT',
                 body: new URLSearchParams(new FormData(event.target)) // event.target is the form
-            })
-            .then((resp) => {
+            }).then((resp) => {
                 return resp.json(); // or resp.text() or whatever the server sends
-            })
-            .then((body) => {
-                alert("Update succeeded");
-                // TODO: Handle response body
-            })
-            .catch((error) => {
-                alert("Update failed: " + error);
-                // TODO: Handle error
+            }).then((body) => {
+                alert("Update succeded")
+                // TODO handle body
+            }).catch((error) => {
+                // TODO handle error
+                alert("Update failed " + error )
             });
         });
