--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,6 @@ block content
     a(href="/register") Register 
   if(user)
     p You are currently logged in as #{user.username}
-    a(href="/fossil") Take me to fossils
+    a(href="/fossils") Take me to fossils
     br
     a(href="/logout") Logout
