--- a/views/fossildelete.pug
+++ b/views/fossildelete.pug
@@ -11,7 +11,7 @@ block content
         - let species = toShow.species
         - let age = toShow.age
         - let actionid = "/resource/fossils/" + fossilId
-        script let actionid = "#{actionId}"
+        script let actionid = "#{actionid}"
 
         div
             div.row
