--- a/views/fossildetail.pug
+++ b/views/fossildetail.pug
@@ -5,14 +5,14 @@ block content
         h2 No instance to show
     else
         h1=title 
-        - let fossilId = toShow._id
+        - let fossilid = toShow._id
         - let era = toShow.era
         - let species = toShow.species
         - let age = toShow.age
         div
             div.row
                 div(class='fossilAttr mr-3') Fossil ID is: 
-                div #{fossilId}
+                div #{fossilid}
             div.row
                 div(class='fossilAttr mr-3') Fossil era is: 
                 div #{era}
